name:                haskell-flexnote-rest
version:             0.1.0.0
description:         Rest API server for Flexnote toy project, written in Haskell
homepage:            https://github.com/sungeunchoi-kr/haskell-flexnote-rest#readme
license:             BSD3
license-file:        LICENSE
author:              Sung E. Choi
maintainer:          sungeunchoi.kr@gmail.com
copyright:           2017 Sung E. Choi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable flexnote-rest
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , process
                     , wai-cors
                     , wai-middleware-static
                     , aeson
                     , scotty
                     , scotty-tls
                     , time
                     , bytestring
                     , text
                     , containers
                     , mtl
                     , directory
                     , http-types
                     , uid

